:bug: Grid options disalignment

--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -434,6 +434,10 @@
   }
 }
 
+.grid-option .custom-select {
+  margin-bottom: 0;
+}
+
 .color-th {
   background-color: $color-gray-10;
   border: 1px solid $color-gray-10;
